# obs-cd-rec-status

./: .gitignore  CMakeLists.txt  README.md  cd-rec-status.cpp
.github/workflows/: release.yml
